src/theme/vars.css
:root {
  --background: oklch(98% 0 0);
  --foreground: oklch(19% 0 0);

  --card: oklch(94% 0 0);
  --border: oklch(84% 0 0);
  --body: oklch(30% 0.01 280);
  --highlight: oklch(35% 0 0);
  --link: oklch(52% 0.15 260);

  --primary: oklch(50% 0.15 280);
  --on-primary: oklch(100% 0 0);
  --primary-foreground: oklch(41% 0.15 280);

  --secondary: oklch(19% 0 0);
  --on-secondary: oklch(96% 0 0);
  --secondary-foreground: oklch(19% 0 0);

  --muted: oklch(45% 0 0);
  --on-muted: oklch(87% 0 0);
  --muted-foreground: oklch(42% 0 0);

  --error: oklch(53% 0.15 25);
  --on-error: oklch(100% 0 0);
  --error-foreground: oklch(50% 0.15 25);

  --warning: oklch(82% 0.15 88);
  --on-warning: oklch(19% 0 0);
  --warning-foreground: oklch(45% 0.15 88);

  --success: oklch(52% 0.15 150);
  --on-success: oklch(100% 0 0);
  --success-foreground: oklch(47% 0.15 150);

  --code: oklch(40% 0.07 280);
  --on-code: oklch(100% 0 0);
  --code-foreground: oklch(41% 0.15 280);
}

.dark {
  --background: oklch(14% 0 0);
  --foreground: oklch(95% 0 0);

  --card: oklch(19% 0 0);
  --border: oklch(32% 0 0);
  --body: oklch(80% 0 0);
  --highlight: oklch(95% 0 0);
  --link: oklch(62% 0.15 260);

  --primary: oklch(41% 0.15 280);
  --on-primary: oklch(100% 0 0);
  --primary-foreground: oklch(62% 0.15 280);

  --secondary: oklch(95% 0 0);
  --on-secondary: oklch(14% 0 0);
  --secondary-foreground: oklch(100% 0 0);

  --muted: oklch(39% 0 0);
  --on-muted: oklch(87% 0 0);
  --muted-foreground: oklch(62% 0 0);

  --error: oklch(45% 0.15 25);
  --on-error: oklch(100% 0 0);
  --error-foreground: oklch(61% 0.15 25);

  --warning: oklch(80% 0.15 87);
  --on-warning: oklch(0% 0 0);
  --warning-foreground: oklch(80% 0.15 87);

  --success: oklch(53% 0.15 150);
  --on-success: oklch(100% 0 0);
  --success-foreground: oklch(72% 0.15 150);

  --code: oklch(25% 0.05 280);
  --on-code: oklch(100% 0 0);
  --code-foreground: oklch(62% 0.15 280);
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);

  --color-card: var(--card);
  --color-border: var(--border);
  --color-body: var(--body);
  --color-highlight: var(--highlight);
  --color-link: var(--link);

  --color-primary: var(--primary);
  --color-on-primary: var(--on-primary);
  --color-primary-foreground: var(--primary-foreground);

  --color-secondary: var(--secondary);
  --color-on-secondary: var(--on-secondary);
  --color-secondary-foreground: var(--secondary-foreground);

  --color-muted: var(--muted);
  --color-on-muted: var(--on-muted);
  --color-muted-foreground: var(--muted-foreground);

  --color-error: var(--error);
  --color-on-error: var(--on-error);
  --color-error-foreground: var(--error-foreground);

  --color-warning: var(--warning);
  --color-on-warning: var(--on-warning);
  --color-warning-foreground: var(--warning-foreground);

  --color-success: var(--success);
  --color-on-success: var(--on-success);
  --color-success-foreground: var(--success-foreground);

  --color-code: var(--code);
  --color-on-code: var(--on-code);
  --color-code-foreground: var(--code-foreground);

  --animate-validating: validating 1.5s ease-in-out infinite;
  --animate-validating-message: validating-message 1.5s ease-in-out infinite;

  @keyframes validating {
    0%,
    100% {
      border-color: var(--primary);
      box-shadow: none;
    }
    50% {
      border-color: color-mix(in oklab, var(--foreground) 40%, var(--primary));
      box-shadow: 0 0 4px 4px
        color-mix(in oklab, var(--primary) 15%, transparent);
    }
  }

  @keyframes validating-message {
    0%,
    100% {
      color: var(--primary-foreground);
      text-shadow: none;
    }
    50% {
      color: color-mix(
        in oklab,
        var(--foreground) 40%,
        var(--primary-foreground)
      );
      text-shadow: color-mix(
          in oklab,
          var(--primary-foreground) 25%,
          transparent
        )
        0px 0px 4px;
    }
  }
}

